update image stretch issue

--- a/src/components/CategoryCard.module.scss
+++ b/src/components/CategoryCard.module.scss
@@ -2,7 +2,6 @@
 
 .container {
 
-    height: 180px;
     margin-bottom: 10px;
     display: block;
     position: relative;
